wdrozenie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        zone: node-a
      containers:
      - name: nginx
        image: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        zone: node-b
      containers:
      - name: nginx
        image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: my-sql
  labels:
    app: mysql
spec:
  nodeSelector:
    zone: node-c
  containers:
  - name: mysql
    image: mysql:5.7
    ports:
    - containerPort: 3306
